# strip_comments_string

./: LICENSE  README.md  __init__.py  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/: ISSUE_TEMPLATE.md
scripts/widget_editor/: 1118.bundle.js  1122.bundle.js  1282.bundle.js  1420.bundle.js  1438.bundle.js  1446.bundle.js  1560.bundle.js  1710.bundle.js  1740.bundle.js  1888.bundle.js  1914.bundle.js  198.bundle.js  205.bundle.js  2077.bundle.js  2094.bundle.js  2244.bundle.js  2278.bundle.js  2398.bundle.js  2586.bundle.js  2658.bundle.js  2686.bundle.js  2692.bundle.js  2745.bundle.js  2962.bundle.js  3042.bundle.js  3062.bundle.js  3096.bundle.js  3182.bundle.js  3622.bundle.js  3726.bundle.js  398.bundle.js  4114.bundle.js  4120.bundle.js  4334.bundle.js  4630.bundle.js  4680.bundle.js  4698.bundle.js  4839.bundle.js  494.bundle.js  4958.bundle.js  (+48 more)
src/py/: nodes.py
src/ts/: editor_widget.ts  widget_editor.ts
tests/: __init__.py  test_strip_comments_string.py
web/js/: nodes.js
